--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -17,6 +17,11 @@ alpha=0.96
 [desktop-notifications]
 command=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
+[bell]
+urgent=yes
+notify=yes
+visual=no
+
 [key-bindings]
 scrollback-up-page=Page_Up
 scrollback-down-page=Page_Down
