--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -21,7 +21,7 @@
     "network",
     "pulseaudio",
     "battery",
-    "custom/notification",
+    // "custom/notification",
     // "clock"
     "custom/clock"
   ],
@@ -174,20 +174,20 @@
     "on-click-right": "pavucontrol",
     "tooltip": false
   },
-  "custom/notification": {
-    "tooltip": true,
-    "format": "{icon}",
-    "format-icons": {
-      "notification": "<span foreground='red'><small><sup>⬤</sup></small></span>",
-      "none": " ",
-      "dnd-notification": "<span foreground='red'><small><sup>⬤</sup></small></span>",
-      "dnd-none": " "
-    },
-    "return-type": "json",
-    "exec-if": "which swaync-client",
-    "exec": "swaync-client -swb",
-    "on-click": "swaync-client -t -sw",
-    "on-click-right": "swaync-client -d -sw",
-    "escape": true
-  }
+  // "custom/notification": {
+  //   "tooltip": true,
+  //   "format": "X{icon}",
+  //   "format-icons": {
+  //     "notification": "<span foreground='red'><small><sup>⬤</sup></small></span>",
+  //     "none": " ",
+  //     "dnd-notification": "<span foreground='red'><small><sup>⬤</sup></small></span>",
+  //     "dnd-none": " "
+  //   },
+  //   "return-type": "json",
+  //   "exec-if": "which swaync-client",
+  //   "exec": "swaync-client -swb",
+  //   "on-click": "swaync-client -t -sw",
+  //   "on-click-right": "swaync-client -d -sw",
+  //   "escape": true
+  // }
 }
