--- a/dot_config/foot/mui-dark.ini
+++ b/dot_config/foot/mui-dark.ini
@@ -9,17 +9,21 @@ foreground = a9abb4 # outline-brigher, NV-70
   
 # Normal/regular colors (color palette 0-7)
 regular0 = 24262b # black   
-regular1 = ff5449 # red   
+# regular1 = ff5449 # red   
+# regular1 = 93000a # red   
+regular1 = ba1a1a # red E-40 error
 regular2 = 7d9a59 # green   
 regular3 = a3903f # yellow   
-regular4 = 7491c7 # blue   
+regular4 = 415f91 # blue P-40 inverse primary
 regular5 = a487a9 # magenta   
 regular6 = 6b9995 # cyan   
 regular7 = 8f9097 # white   
+regular7 =  c4c6d0 # white   
+# "on-surface-variant" = "#c4c6d0"        # NV-90; primary text colour 
 
 # Bright colors (color palette 8-15)
 bright0 = 44474e # black
-bright1 = ffb4ab # red
+bright1 = ffdad6 # red E-90
 bright2 = b1d18a # green
 bright3 = d8c66e # yellow
 bright4 = aac7ff # blue
@@ -28,7 +32,7 @@ bright6 = a0d0cb # cyan
 bright7 = c4c6d0 # white
 
 dim0 = 0c0c0e # black
-dim1 = b30b00 # red
+dim1 = 690005 # red E-20
 dim2 = 42512f # green
 dim3 = 5c5124 # yellow
 dim4 = 4264a4 # blue
