--- a/dot_config/fnott/fnott.ini
+++ b/dot_config/fnott/fnott.ini
@@ -34,7 +34,8 @@ border-color=8e9099ff
 # padding-vertical=20
 # padding-horizontal=20
 
-dpi-aware=yes
+# dpi-aware=yes
+dpi-aware=no
 
 title-font=sans serif:size=10
 # title-color=ffffffff
