add rgba equiv for docs

--- a/dot_config/helix/themes/mui_dark.toml
+++ b/dot_config/helix/themes/mui_dark.toml
@@ -89,38 +89,38 @@
 [palette]
 # surfaces 
 "surface-dim" = "#111318"               # N-6; in this scheme, same as Surface; unused 
-"surface" = "#111318"                   # N-6; the primary editor surface layer; surface neutrals have a weak primary colour tint 
+"surface" = "#111318"                   # N-6; rgba(17, 19, 24, 1) the primary editor surface layer; surface neutrals have a weak primary colour tint 
 "surface-bright" = "#37393e"            # N-24; ui.selection 
 "surface-container-lowest" = "#0c0e13"  # N-4; unused
-"surface-container-low" = "#191c20"     # N-10; unused 
-"surface-container" = "#1d2024"         # N-12; cursorline, bufferline, statusline 
-"surface-container-high" = "#282a2f"    # N-17; background for all popups, menus, help
+"surface-container-low" = "#191c20"     # N-10; unused rgba(25, 28, 32, 1);
+"surface-container" = "#1d2024"         # N-12; rgba(29, 32, 36, 1) cursorline, bufferline, statusline 
+"surface-container-high" = "#282a2f"    # N-17; rgba(40, 42, 47, 1) background for all popups, menus, help
 "surface-container-highest" = "#33353a" # N-24; window splitline
 "inverse-surface" = "#e2e2e9"           # N-90; unused 
 "inverse-on-surface" = "#2e3036"        # N-20; unused 
 "inverse-primary" = "#415f91"           # P-40
-"primary" = "#aac7ff"                   # P-80; (blue primary, affects NV and surface)
-"on-primary" = "#0a305f"                # P-20;
-"primary-container" = "#284777"         # P-30; 
-"on-primary-container" = "#d6e3ff"      # P-90; 
+"primary" = "#aac7ff"                   # P-80; rgba(170, 199, 255, 1)
+"on-primary" = "#0a305f"                # P-20; rgba(10, 48, 95, 1)
+"primary-container" = "#284777"         # P-30; rgba(40, 71, 119, 1)
+"on-primary-container" = "#d6e3ff"      # P-90; rgba(214, 227, 255, 1)
 "secondary" = "#bec6dc"                 # S-80; 
 "on-secondary" = "#283141"              # S-20;
-"secondary-container" = "#3e4759"       # S-30; 
-"on-secondary-container" = "#dae2f9"    # S-90; 
+"secondary-container" = "#3e4759"       # S-30; rgba(62, 71, 89, 1);
+"on-secondary-container" = "#dae2f9"    # S-90; rgba(218, 226, 249, 1);
 "tertiary" = "#ddbce0"                  # T-80; 
 "on-tertiary" = "#3f2844"               # T-20
 "tertiary-container" = "#573e5c"        # T-30; 
 "on-tertiary-container" = "#fad8fd"     # T-90; 
-"error" = "#ffb4ab"                     # E-80; 
-"on-error" = "#690005"                  # E-20;
-"error-container" = "#93000a"           # E-30; 
-"on-error-container" = "#ffdad6"        # E-90;
-"on-surface" = "#e2e2e9"                # N-90; 
-"on-surface-variant" = "#c4c6d0"        # NV-90; primary text colour 
+"error" = "#ffb4ab"                     # E-80; rgba(255, 180, 171, 1);
+"on-error" = "#690005"                  # E-20; rgba(105, 0, 5, 1);
+"error-container" = "#93000a"           # E-30; rgba(147, 0, 10, 1);
+"on-error-container" = "#ffdad6"        # E-90; rgba(255, 218, 214, 1);
+"on-surface" = "#e2e2e9"                # N-90; rgba(226, 226, 233, 1)
+"on-surface-variant" = "#c4c6d0"        # NV-90; rgba(196, 198, 208, 1) primary text colour 
 "outline-brighter" = "#A9ABB4"          # NV-70; 
-"outline" = "#8e9099"                   # NV-60; 
+"outline" = "#8e9099"                   # NV-60; rgba(142, 144, 153, 1)
 "outline-dimmer" = "#5B5E66"            # NV-40; comments
-"outline-variant" = "#44474e"           # NV-30; # redefine standard 16 colour names
+"outline-variant" = "#44474e"           # NV-30; rgba(68, 71, 78, 1) # redefine standard 16 colour names
 "black" = "#24262B"                     # 0; NV-15
 "red" = "#FF5449"                       # 1; Error-60 
 "green" = "#7D9A59"                     # 2; Green-60(green primary)
