--- a/dot_config/wob/wob.ini
+++ b/dot_config/wob/wob.ini
@@ -3,9 +3,10 @@ height = 32
 border_offset = 0
 border_size = 2
 bar_padding = 2
-border_color = 35B9AB66
-background_color = 173F4F66
-bar_color = 35B9ABFF
-overflow_border_color = EE2E2466
-overflow_background_color = 173F4F66
-overflow_bar_color = EE2E24FF
+# values must be RRGGBB[AA] (capitalized)
+border_color = 284777FF
+background_color = 1d2024FF
+bar_color = 284777FF
+overflow_border_color = 93000AFF
+overflow_background_color = 1d2024FF
+overflow_bar_color = 93000AFF
