--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -24,8 +24,9 @@ insert = "bar"
 render = true
 skip-levels = 1
 
-[editor.inline-diagnostics]
-cursor-line = "error"
+# new in 25.01 but feels clunky
+# [editor.inline-diagnostics]
+# cursor-line = "error"
 
 [editor.lsp]
 display-messages = true
