--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -9,16 +9,6 @@
 [language-server.scls]
 command = "simple-completion-language-server"
 
-# [language-server.scls.config]
-# max_completion_items = 20            # set max completion results len for each group: words, snippets, unicode-input
-# snippets_first = true                # completions will return before snippets by default
-# snippets_inline_by_word_tail = false # suggest snippets by WORD tail, for example text `xsq|` become `x^2|` when snippet `sq` has body `^2`
-# feature_words = true                 # enable completion by word
-# feature_snippets = true              # enable snippets
-# feature_unicode_input = true         # enable "unicode input"
-# feature_paths = true                 # enable path completion
-# feature_citations = false            # enable citation completion (only on `citation` feature enabled)
-# 
 # https://docs.astral.sh/ruff/editors/setup/#helix
 [language-server.ruff]
 command = "ruff"
@@ -71,6 +61,11 @@ name = "go"
 auto-format = true
 formatter = { command = "goimports" }
 language-servers = ["scls", "gopls", "golangci-lint-langserver"]
+
+# go templating
+[[language]]
+name = "templ"
+auto-format = true
 
 [[language]]
 name = "python"
