--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -42,6 +42,8 @@ left = [
 
 [keys.insert]
 esc = ["collapse_selection", "keep_primary_selection", "normal_mode"]
+"C-k" = ["page_cursor_half_up"]
+"C-j" = ["page_cursor_half_down"]
 
 [keys.select]
 esc = ["collapse_selection", "keep_primary_selection", "normal_mode"]
@@ -54,10 +56,12 @@ C-n = ["move_line_down", "scroll_down"]
 esc = ["collapse_selection", "keep_primary_selection", "normal_mode"]
 G = "goto_file_end"
 g.q = ":reflow"
-"tab" = ":buffer-next"
-"S-tab" = ":buffer-previous"
-"A-u" = ["switch_to_lowercase"]
-"A-S-u" = ["switch_to_uppercase"]
+tab = ":buffer-next"
+S-tab = ":buffer-previous"
+A-u = ["switch_to_lowercase"]
+A-S-u = ["switch_to_uppercase"]
+C-k = ["page_cursor_half_up"]
+C-j = ["page_cursor_half_down"]
 
 # Alt-x shrink selection by one line
 A-x = "extend_to_line_bounds"
