force Nerd Roboto Mono & make CSD top bar same as gnome std height

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -3,7 +3,8 @@ include=~/.config/foot/mui-dark.ini
 # include=/usr/share/foot/themes/material-design
 
 # do your font config in fontconfig!
-font=monospace:size=11
+# font=monospace:size=11
+font=RobotoMono Nerd Font:size=11
 line-height=14
 
 [mouse]
@@ -28,7 +29,7 @@ scrollback-down-page=Page_Down
 
 [csd]
 # colors are in AARRGGBB format, 00 fully translucent, FF opaque
-size=32
+size=42
 border-width=2
 border-color=ff242424 # gnome focussed
 button-color = ff8e9099  # NV-60; 
