--- a/dot_config/alacritty/system.toml
+++ b/dot_config/alacritty/system.toml
@@ -13,22 +13,22 @@ style = "Block"
 [font]
 size = 10
 
-[font.normal]
-family = "Roboto Mono"
-# family = "IBM Plex Mono"
-style = "Regular"
+# [font.normal]
+# family = "Roboto Mono"
+# # family = "IBM Plex Mono"
+# style = "Regular"
 
-[font.bold]
-family = "Roboto Mono"
-style = "Bold"
+# [font.bold]
+# family = "Roboto Mono"
+# style = "Bold"
 
-[font.bold_italic]
-family = "Roboto Mono"
-style = "Bold Italic"
+# [font.bold_italic]
+# family = "Roboto Mono"
+# style = "Bold Italic"
 
-[font.italic]
-family = "Roboto Mono"
-style = "Italic"
+# [font.italic]
+# family = "Roboto Mono"
+# style = "Italic"
 
 # [font.offset]
 # # vertical spacing, some fonts need a bit of compression
