--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,35 +1,15 @@
-#
 # Run `ghostty +show-config --default --docs` to view a list of
 # all available config options and their default values.
 #
 # Additionally, each config option is also explained in detail
 # on Ghostty's website, at https://ghostty.org/docs/config.
 
+font-family = "RobotoMono Nerd Font Mono"
+font-style = "Regular"
+font-style-bold = "SemiBold"
+font-style-italic = "Italic"
+font-style-bold-italic = "SemiBold Italic"
 
-font-family = RobotoMono Nerd Font Mono
-# theme = MaterialDarker
+font-size = 14
 theme = mui-dark
-background-opacity = 0.90
-
-# window-padding-x = 2
-#
-# # Spacing around the equals sign does not matter.
-# # All of these are identical:
-# key=value
-# key= value
-# key =value
-# key = value
-#
-# # Any line beginning with a # is a comment. It's not possible to put
-# # a comment after a config option, since it would be interpreted as a
-# # part of the value. For example, this will have a value of "#123abc":
-# background = #123abc
-#
-# # Empty values are used to reset config keys to default.
-# key =
-#
-# # Some config options have unique syntaxes for their value,
-# # which is explained in the docs for that config option.
-# # Just for example:
-# resize-overlay-duration = 4s 200ms
-
+background-opacity = 0.94
